--- a/index.html
+++ b/index.html
@@ -1,8 +1,34 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>dabolt99</title>
+
+    <link href="CSS/style.css" rel="stylesheet">
 </head>
 <body>
-    
+    <nav id="siteNav" class="" role="navigation">
+        <div class="container">
+            <div class=""
+                <button type="button" class="" data-toggle="" data-target="">
+                    <span class=""></span>
+                    <span class=""></span>
+                    <span class=""></span>
+                </button>
+                <a class="" href="#">
+                    Dylan Armstrong
+                </a>
+        </div>
+    </nav>
+    <header>
+
+    </header>
+    <p>
+
+    </p>
+    <footer>
+
+    </footer>
 </body>
 </html>
