--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <title>dabolt99</title>
 
     <link href="CSS/style.css" rel="stylesheet">
+    <link href="CSS/bootstrap.css" rel="stylesheet">
+    <link href="CSS/bootstrap.min.css" rel="stylesheet">
+    <link href="https://kit.fontawesome.com/acc5dbbd71.css" rel="stylesheet" crossorigin="anonymous">
 </head>
 <body>
     <nav id="siteNav" class="" role="navigation">
         <div class="container">
-            <div class=""
+            <div class="">
                 <button type="button" class="" data-toggle="" data-target="">
                     <span class=""></span>
                     <span class=""></span>
@@ -19,16 +22,19 @@
                 <a class="" href="#">
                     Dylan Armstrong
                 </a>
+            </div>
         </div>
     </nav>
     <header>
-
+        <h1>Dylan Armstrong</h1>
     </header>
-    <p>
+    <center>
+    <div class="">
 
-    </p>
+    </div>
+    </center>
     <footer>
-
+        &copy; 2022-2023 Dylan Armstrong
     </footer>
 </body>
 </html>
