--- a/index.html
+++ b/index.html
@@ -11,17 +11,30 @@
     <link href="https://kit.fontawesome.com/acc5dbbd71.css" rel="stylesheet" crossorigin="anonymous">
 </head>
 <body>
-    <nav id="siteNav" class="" role="navigation">
+    <nav id="siteNav" class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
-            <div class="">
-                <button type="button" class="" data-toggle="" data-target="">
-                    <span class=""></span>
-                    <span class=""></span>
-                    <span class=""></span>
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
-                <a class="" href="#">
+                <a class="navbar-brand" href="#">
                     Dylan Armstrong
                 </a>
+            </div>
+            <div class="collapse navbar-collapse" id="navbar">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Projects <span class="caret"></span></a>
+                        <ul class="dropdown-menu" aria-labelledby="about-us">
+                            <li><a href="#Project 1">Project 1</a></li>
+                            <li><a href="#Project 2">Project 2</a></li>
+                            <li><a href="#Project 3">Project 3</a></li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
         </div>
     </nav>
@@ -29,7 +42,18 @@
         <h1>Dylan Armstrong</h1>
     </header>
     <center>
-    <div class="">
+    <div class="projects">
+        <h1>About Me</h1>
+        <p></p>
+
+        <hr>
+
+        <h1>Projects</h1>
+        <p></p>
+
+        <hr>
+
+        <h1>Documents</h1>
 
     </div>
     </center>
