--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     Dylan Armstrong
                 </a>
             </div>
-            <div class="collapse navbar-collapse" id="navbar">
+            <div class="collapse:not(.show) navbar-collapse" id="navbar">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Projects <span class="caret"></span></a>
@@ -40,6 +40,9 @@
     </nav>
     <header>
         <h1>Dylan Armstrong</h1>
+        <a href="mailto:dylan.armstrong2658@gmail.com"> E-Mail</a>
+        <a href="https://github.com/dabolt99"> GitHub</a>
+        <a href="https://www.linkedin.com/in/dylan-armstrong-5440b1156/"> LinkedIn</a>
     </header>
     <center>
     <div class="projects">
