--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Dylan Armstrong</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -85,20 +85,28 @@
     <center>
     <div class="projects">
         <h1>About Me</h1>
-        <p></p>
-        <h5>Education</h5>
-        <p></p>
-        <h5>Experience</h5>
-        <p></p>
+        <p>Lorem Ipsum</p>
+        <h4>Education</h4>
+        <p>Lorem Ipsum</p>
+        <h4>Experience</h4>
+        <p>Lorem Ipsum</p>
 
         <hr>
 
         <h1>Projects</h1>
-        <p></p>
+        <h4>Pong</h4>
+        <p>This is a recreation of the classic game Pong. Using the Unity game engine, I created the stage, paddles, ball, and scoring mechanics to simulate the first videogame Pong</p>
+        <h4>Arcade Game</h4>
+        <p>Arcade Game is an application that allows you to play a selection of games such as Tic-Tac-Toe, Connect Four, and Hangman.</p>
+        <h4>Graphing Application</h4>
+        <p>This is a simple graphing calculator that does simple math problems as well as graphing equations.</p>
 
         <hr>
 
         <h1>Documents</h1>
+        <a href="mailto:dylan.armstrong2658@gmail.com"> Resume</a>
+        <a href="https://github.com/dabolt99"> Cover Letter</a>
+        <a href="https://www.linkedin.com/in/dylan-armstrong-5440b1156/"> LinkedIn</a>
 
     </div>
     </center>
