--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 </head>
 <body>
     
-    <nav class="navbar navbar-expand-lg ">
+    <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Dylan Armstrong</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse " id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -49,33 +49,6 @@
         </div>
     </nav>
 
-    <nav id="siteNav" class="navbar navbar-default navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
-                    <span class="visually-hidden visually-hidden-focusable:not(:focus):not(:focus-within)">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">
-                    Dylan Armstrong
-                </a>
-            </div>
-            <div class="collapse:not(.show) navbar-collapse" id="navbar">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Projects <span class="caret"></span></a>
-                        <ul class="dropdown-menu" aria-labelledby="about-us">
-                            <li><a href="#Project 1">Project 1</a></li>
-                            <li><a href="#Project 2">Project 2</a></li>
-                            <li><a href="#Project 3">Project 3</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
     <header>
         <h1>Dylan Armstrong</h1>
         <a href="mailto:dylan.armstrong2658@gmail.com"> E-Mail</a>
@@ -104,7 +77,7 @@
         <hr>
 
         <h1>Documents</h1>
-        <a href="mailto:dylan.armstrong2658@gmail.com"> Resume</a>
+        <a href="download:"> Resume</a>
         <a href="https://github.com/dabolt99"> Cover Letter</a>
         <a href="https://www.linkedin.com/in/dylan-armstrong-5440b1156/"> LinkedIn</a>
 
