--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>dabolt99</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="CSS/bootstrap.css" rel="stylesheet">
-    <link href="CSS/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <link href="https://kit.fontawesome.com/acc5dbbd71.css" rel="stylesheet" crossorigin="anonymous">
     <link href="CSS/style.css" rel="stylesheet">
 </head>
@@ -52,10 +52,9 @@
     <header>
         <h1>Dylan Armstrong</h1>
         <a href="mailto:dylan.armstrong2658@gmail.com"> E-Mail</a>
-        <a href="https://github.com/dabolt99"> GitHub</a>
-        <a href="https://www.linkedin.com/in/dylan-armstrong-5440b1156/"> LinkedIn</a>
+        <a href="https://github.com/dabolt99" target="_blank" rel="noopener noreferrer"> GitHub</a>
+        <a href="https://www.linkedin.com/in/dylan-armstrong-5440b1156/" target="_blank" rel="noopener noreferrer"> LinkedIn</a>
     </header>
-    <center>
     <div class="projects">
         <h1>About Me</h1>
         <p>Lorem Ipsum</p>
@@ -77,14 +76,13 @@
         <hr>
 
         <h1>Documents</h1>
-        <a href="download:"> Resume</a>
-        <a href="https://github.com/dabolt99"> Cover Letter</a>
-        <a href="https://www.linkedin.com/in/dylan-armstrong-5440b1156/"> LinkedIn</a>
+        <a href="PDF/Current Resume.pdf" target="_blank" rel="noopener noreferrer"> Resume</a>
+        <a href="https://github.com/dabolt99" target="_blank" rel="noopener noreferrer"> Cover Letter</a>
 
     </div>
-    </center>
     <footer>
         &copy; 2022-2023 Dylan Armstrong
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
 </body>
 </html>
