--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                             Documents
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Resume</a></li>
+                            <li><a class="dropdown-item" href="PDF/Current Resume PDF.pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">Cover Letter</a></li>
+                            <li><a class="dropdown-item" href="PDF/Cover Letter PDF.pdf" target="_blank" rel="noopener noreferrer">Cover Letter</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">References</a></li>
+                            <li><a class="dropdown-item" href="PDF/Reference Letter PDF.pdf" target="_blank" rel="noopener noreferrer">References</a></li>
                         </ul>
                     </li>
                  </ul>
@@ -50,30 +50,73 @@
         <a href="https://github.com/dabolt99" target="_blank" rel="noopener noreferrer"> GitHub</a>
         <a href="https://www.linkedin.com/in/dylan-armstrong-5440b1156/" target="_blank" rel="noopener noreferrer"> LinkedIn</a>
     </header>
+
+    <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Dylan Armstrong</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="#">About Me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="#">Projects</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Documents
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="PDF/Current Resume PDF.pdf" target="_blank" rel="noopener noreferrer">Resume</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="PDF/Cover Letter PDF.pdf" target="_blank" rel="noopener noreferrer">Cover Letter</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="PDF/Reference Letter PDF.pdf" target="_blank" rel="noopener noreferrer">References</a></li>
+                        </ul>
+                    </li>
+                 </ul>
+                
+            </div>
+        </div>
+    </nav>
+
     <div class="projects">
-        <h1>About Me</h1>
-        <p>Lorem Ipsum</p>
-        <h4>Education</h4>
-        <p>Lorem Ipsum</p>
-        <h4>Experience</h4>
-        <p>Lorem Ipsum</p>
-
+        <div>
+            <h1>Documents</h1>
+            <a href="PDF/Current Resume PDF.pdf" target="_blank" rel="noopener noreferrer"> Resume</a>
+            <a href="PDF/Cover Letter PDF.pdf" target="_blank" rel="noopener noreferrer"> Cover Letter</a>
+            <a href="PDF/Reference Letter PDF.pdf" target="_blank" rel="noopener noreferrer"> References</a>
+        </div>
         <hr>
-
-        <h1>Projects</h1>
-        <h4>Pong</h4>
-        <p>This is a recreation of the classic game Pong. Using the Unity game engine, I created the stage, paddles, ball, and scoring mechanics to simulate the first videogame Pong</p>
-        <h4>Arcade Game</h4>
-        <p>Arcade Game is an application that allows you to play a selection of games such as Tic-Tac-Toe, Connect Four, and Hangman.</p>
-        <h4>Graphing Application</h4>
-        <p>This is a simple graphing calculator that does simple math problems as well as graphing equations.</p>
-
+        <div class="about-me">
+            <h1>About Me</h1>
+            <p>My name is Dylan Armstrong, or Dabolt99 online. </p>
+            <h4>Education</h4>
+            <p>Lorem Ipsum</p>
+            <h4>Experience</h4>
+            <p>Lorem Ipsum</p>
+        </div>   
         <hr>
-
-        <h1>Documents</h1>
-        <a href="PDF/Current Resume.pdf" target="_blank" rel="noopener noreferrer"> Resume</a>
-        <a href="https://github.com/dabolt99" target="_blank" rel="noopener noreferrer"> Cover Letter</a>
-
+        <div class="projects">
+            <h1>Projects</h1>
+            <div class="row">
+                <div class="col-sm-4 container-sm border">
+                    <h4>Pong</h4>
+                    <p>This is a recreation of the classic game Pong. Using the Unity game engine, I created the stage, paddles, ball, and scoring mechanics to simulate the first videogame Pong</p>
+                </div>
+                <div class="col-sm-4 container-sm border">
+                    <h4>Arcade Game</h4>
+                    <p>Arcade Game is an application that allows you to play a selection of games such as Tic-Tac-Toe, Connect Four, and Hangman.</p>
+                </div>
+                <div class="col-sm-4 container-sm border">
+                    <h4>Graphing Application</h4>
+                    <p>This is a simple graphing calculator that does simple math problems as well as graphing equations.</p>
+                </div>
+            </div> 
+        </div>
     </div>
     <footer>
         &copy; 2022-2023 Dylan Armstrong
